tdf#130827 Qt5 report frame-relative cursor pos

Qt5Frame::GetPointerState expects the cursor position relative to
the frame position.

Change-Id: Icaf7dcd8fc80d712f5138a9f9b843ccf345c5543
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/89244
Tested-by: Jenkins
Reviewed-by: Jan-Marek Glogowski <glogow@fbihome.de>
(cherry picked from commit 4fe30879af391c32074a003a7a6ddd45431d212a)